[package]
name = "mc-ping"
version = "0.1.0"
authors = ["Jay Vana <jsvana@mtu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.3"
integer-encoding = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
