[package]
name = "minecraft"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.3"
integer-encoding = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["net", "io-util"] }

[dev-dependencies]
anyhow = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
