[package]
name = "async-minecraft-ping"
version = "0.5.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async Rust client for the Minecraft ServerListPing protocol"
readme = "README.md"
repository = "https://github.com/jsvana/async-minecraft-ping/"
keywords = ["minecraft", "mc", "serverlistping"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.tokio]
version = "^1.6"
features = [
    "net",
    "io-util"
]

[dev-dependencies]
anyhow = "1.0"
structopt = "0.3"

[dev-dependencies.tokio]
version = "^1.6"
features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util"
]
